--- a/project/app/common/CMakeLists.txt
+++ b/project/app/common/CMakeLists.txt
@@ -1,8 +1,8 @@
 project(Common)
 
-find_package(Boost REQUIRED)
+find_package(boost REQUIRED)
 
-include_directories(${Boost_INCLUDE_DIRS})
+include_directories(${boost_INCLUDE_DIRS})
 
 set(HEADERS
     ${PROJECT_SOURCE_DIR}/include/constants/Constants.hpp
