--- a/project/app/configs/CMakeLists.txt
+++ b/project/app/configs/CMakeLists.txt
@@ -2,9 +2,9 @@ project(Configs)
 
 add_subdirectory(ut)
 
-find_package(Boost COMPONENTS program_options REQUIRED)
+find_package(boost COMPONENTS program_options REQUIRED)
 
-include_directories(${Boost_INCLUDE_DIRS})
+include_directories(${boost_INCLUDE_DIRS})
 
 set(HEADERS
     ${PROJECT_SOURCE_DIR}/include/configs/StartupConfig.hpp
@@ -17,7 +17,7 @@ set(SOURCES
 add_library(${PROJECT_NAME} STATIC ${SOURCES} ${HEADERS})
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
-    ${Boost_PROGRAM_OPTIONS_LIBRARY}
+    ${boost_PROGRAM_OPTIONS_LIBRARY}
     Common
 )
 
