--- a/project/app/parsers/ut/CMakeLists.txt
+++ b/project/app/parsers/ut/CMakeLists.txt
@@ -1,8 +1,8 @@
 project(ParsersTests)
 
-find_package(GTest REQUIRED)
+find_package(gtest REQUIRED)
 
-include_directories(${GTEST_INCLUDE_DIRS})
+include_directories(${gtest_INCLUDE_DIRS})
 
 set(SOURCES
     JsonParser_tests.cpp
